--- a/Szilagyi_Rima_Coyle Project Proposal.ipynb
+++ b/Szilagyi_Rima_Coyle Project Proposal.ipynb
@@ -126,9 +126,9 @@
    "id": "717a421e-f628-4008-8a1a-35a6f45e933f",
    "metadata": {},
    "source": [
-    "We can visualize the data and the impact of variables on precipitation using a correlation coefficient and a heatmap. This method would be a great starting point for our analysis, as it would give us a baseline of what would be important to anlyze further. Another way we could visualize our data is to create line charts. This is very common in the meteorology field, and can describe what the change in variables looks like over time. This Would be ebenficial when plotted against precipitation, because we could visualize which changes in which variables led to the precipitation. \n",
+    "We can visualize the data and the impact of variables on precipitation using a correlation coefficient and a heatmap. This method would be a great starting point for our analysis, as it would give us a baseline of what would be important to anlyze further. Another way we could visualize our data is to create line charts. This is very common in the meteorology field, and can describe what the change in variables looks like over time. This would be beneficial when plotted against precipitation, because we could visualize which changes in which variables led to the precipitation. \n",
     "\n",
-    "After we create our model and analyze the data, we will also want to visualize the results and check its accuracy. To do this, we could use "
+    "After we create our model and analyze the data, we will also want to visualize the results and check its accuracy. To do this, we could plot the actual precipitation and the forecasted precipitation, to see the visual comparison between the outcomes."
    ]
   },
   {
@@ -146,8 +146,11 @@
    "source": [
     "We can use linear regression models to determine which variables have an impact on precipitation. We can create different models to test which variables have the greatest impact on precipitation. Using the correlation heatmap from our exploratory studies, we could determine the variables we need to put into the linear regression model. \n",
     "\n",
-    "To create the model that will help us forecast precipitation, we can use decision trees. This decision tree would be put together using the historical data from past forecasts, and the models, such as the linear regression model, that we've already created. Then we could use the decision tree to forecast whether or not there would be precipitation. Additionally, we could use kkN to determine the overlap of the varaibale, and analyze the confusin matrix. This would allow us to train the model, and then test it, to determine which variables truly have the greatest impact, and then train the model to forecast more approporiately.\n",
-    "\n"
+    "To create the model that will help us forecast precipitation, we can use decision trees. This decision tree would be put together using the historical data from past forecasts, and the models, such as the linear regression model, that we've already created. Then we could use the decision tree to forecast whether or not there would be precipitation. Additionally, we could use kkN to determine the overlap of the varaiable, and analyze the confusion matrix. This would allow us to train the model, and then test it, to determine which variables truly have the greatest impact. This would heopfully lead to a model that can forecast precipitation accurately based on the environmental factors.\n",
+    "\n",
+    "To analyze the accuracy of our model, we could model the difference between the actual precipitation and the forecasted precipitation, we could determine the deviance between the two. If we determine deviance for multiple days of data, we could plot the deviance across multiple days of data dn determine the overall average error. This would allow us to analyze whether or not our model was effective. We could perfrom some of this analysis using standard deviation formulas.\n",
+    "\n",
+    "We hope to calculate which variables have the greatest impact on precipitation, just based on the models. From this, we want to determine if our model is accurate when coapred to actual precipitation, so we will be analyzing the variables first, and then analyzing the accuracy of our model afterwards. "
    ]
   },
   {
