--- a/Szilagyi_Rima_Coyle Project Proposal.ipynb
+++ b/Szilagyi_Rima_Coyle Project Proposal.ipynb
@@ -150,7 +150,7 @@
     "\n",
     "To analyze the accuracy of our model, we could model the difference between the actual precipitation and the forecasted precipitation, we could determine the deviance between the two. If we determine deviance for multiple days of data, we could plot the deviance across multiple days of data dn determine the overall average error. This would allow us to analyze whether or not our model was effective. We could perfrom some of this analysis using standard deviation formulas.\n",
     "\n",
-    "We hope to calculate which variables have the greatest impact on precipitation, just based on the models. From this, we want to determine if our model is accurate when coapred to actual precipitation, so we will be analyzing the variables first, and then analyzing the accuracy of our model afterwards. "
+    "We hope to calculate which variables have the greatest impact on precipitation, just based on the models. From this, we want to determine if our model is accurate when compared to actual precipitation, so we will be analyzing the variables first, and then analyzing the accuracy of our model afterwards. "
    ]
   },
   {
